Finish base html and css

--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/main.css">
    <title>Drum-Kit</title>
 </head>
 
 <body>
-   <div class="">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+   <h1 class="header">Drum Kit Machine</h1>
+   <div class="keys">
+      <div class="keys__item">A <span>Clap</span></div>
+      <div class="keys__item">S<span>Hihat</span></div>
+      <div class="keys__item">D<span>Kick</span></div>
+      <div class="keys__item">F<span>Openhat</span></div>
+      <div class="keys__item">G<span>Boom</span></div>
+      <div class="keys__item">H<span>Ride</span></div>
+      <div class="keys__item">J<span>Snare</span></div>
+      <div class="keys__item">K<span>Tom</span></div>
+      <div class="keys__item">L<span>Tink</span></div>
    </div>
+
+   <audio src="audio/Clap.mp3"></audio>
+   <audio src="audio/HiHat.ogg"></audio>
+   <audio src="audio/Kick.ogg"></audio>
+   <audio src="audio/openhat.mp3"></audio>
+   <audio src="audio/bum.mp3"></audio>
+   <audio src="audio/Ride.ogg"></audio>
+   <audio src="audio/Snare.mp3"></audio>
+   <audio src="audio/tom.ogg"></audio>
+   <audio src="audio/tink.ogg"></audio>
+
 </body>
 
 </html>
