--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       <div data-key="76" class="keys__item">L<span>Tink</span></div>
    </div>
 
-   <audio data-key="65" src="audio/clap.mp3"></audio>
-   <audio data-key="83" src="audio/hihat.mp3"></audio>
-   <audio data-key="68" src="audio/kick.mp3"></audio>
-   <audio data-key="70" src="audio/openhat.mp3"></audio>
-   <audio data-key="71" src="audio/bum.mp3"></audio>
-   <audio data-key="72" src="audio/ride.mp3"></audio>
-   <audio data-key="74" src="audio/snare.mp3"></audio>
-   <audio data-key="75" src="audio/tom.ogg"></audio>
-   <audio data-key="76" src="audio/tink.ogg"></audio>
+   <audio data-key="65" src="audio/clap.wav"></audio>
+   <audio data-key="83" src="audio/hihat.wav"></audio>
+   <audio data-key="68" src="audio/kick.wav"></audio>
+   <audio data-key="70" src="audio/openhat.wav"></audio>
+   <audio data-key="71" src="audio/bum.wav"></audio>
+   <audio data-key="72" src="audio/ride.wav"></audio>
+   <audio data-key="74" src="audio/snare.wav"></audio>
+   <audio data-key="75" src="audio/tom.wav"></audio>
+   <audio data-key="76" src="audio/tink.wav"></audio>
    <script>
       function playsound(e) {
          const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); // перерменная хранящяя аудио элемент с кодом кнопки
